--- a/ContactDetails.API/appsettings.json
+++ b/ContactDetails.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ContactDetailsConnectionString": "Data Source=DESKTOP-6RGOOTH;Initial Catalog=ContactDetailsDb;Trusted_Connection=false;User Id=sa;Password=CG-vak123;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "ContactDetailsConnectionString": "Data Source=*****;Initial Catalog=ContactDetailsDb;Trusted_Connection=false;User Id=sa;Password=****;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "JWT": {
     "ValidAudience": "http://localhost:7299",
