--- a/ContactDetails.API/ContactDetails.API.csproj
+++ b/ContactDetails.API/ContactDetails.API.csproj
@@ -20,6 +20,7 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="5.2.1" />
   </ItemGroup>
 
 </Project>
